# Automatic-Circuit-Discovery

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AutomaticCircuitDiscovery.ipynb  Dockerfile  LICENSE  Main_Demo.ipynb  README.md  acdc_with_remove_redundant.json  acdcpp_ioi.py  analysis_owt.py  arthurs_experiments.py  circuit_discovery.py  eout.txt  experiments.ipynb  experiments.py  experiments_big_head.ipynb  get_act.py  good_old_run.txt  gpt2.py  induction.py  ioi.py  ioi_dataset.py  ioi_search.py  ioi_utils.py  lens.py  load_dataset.txt  loss_new.pt  low_loss_tokens.py  new_ioi_notebook.py  notebook.py  out.txt  out2.txt  outp.txt  output_before_borked.sage.py  owt.py  packages.txt  profile2misha.json  pyproject.toml  (+11 more)
acdc/: ActivationCache.py  FactoredMatrix.py  HookedTransformer.py  HookedTransformerConfig.py  TLACDCCorrespondence.py  TLACDCEdge.py  TLACDCExperiment.py  TLACDCInterpNode.py  __init__.py  acdc.py  acdc_graphics.py  acdc_utils.py  bad_run.txt  bout.txt  bout2.txt  components.py  copied_extra_utils.py  copied_plotting.py  edge_sp.py  evals.py  global_cache.py  graphics.py  hook_points.py  ioi_dataset.py  local.pth  logic_gates.py  main.py  main2.py  make_docs.py  manual_docstring_interp.py  media_zero_json.json  munging_utils.py  past_key_value_caching.py  patching.py  scratch.py  script.py  smolout2.txt  time.py  tracr.pth  train.py  (+2 more)
all_greedy/: 0.json  1.json  2.json  3.json  4.json  5.json
circ_models2/: attention_only_2.circ  attention_only_bn_2.circ  attention_only_bn_4.circ  attention_only_one_layer_untied.circ  bilinear_2.circ  bilinear_4.circ  bilinear_bn_2.circ  bilinear_bn_4.circ  codegen-350M-mono.circ  (+10 more)
(+848 files in other folders)
